# e-Yantra_Krishi_Cobot

ebot_controller/: CMakeLists.txt  package.xml
ebot_controller/src/: ebot_nav_task1A.py  ebot_nav_task2a.py  ebot_nav_task3b.py  ebot_nav_task4b.py  ebot_nav_task4b_sim.py  ebot_nav_task4c.py  shape_detector_task2a.py  shape_detector_task3b.py  shape_detector_task4b.py  shape_detector_task4c.py
ebot_controller_2345/: CMakeLists.txt  REABME.md  package.xml
ebot_controller_2345/src/: ebot_nav_final.py  ebot_nav_task5.py  ebot_nav_task6.py  shape_detector_final.py  shape_detector_task5.py  shape_detector_task6.py
eyantra_warehouse/launch/: task4c.launch.py
eyantra_warehouse/worlds/: my_world.world
ur5_control/: CMakeLists.txt  README.md
ur5_control/src/: task1b.py  task1c.py  task2b_manipulation.py  task2b_perception.py  task3a.py  task3b.py  task3b_manipulation.py  task3b_perception.py  task4a.py  task4a_manipulation.py  task4a_manipulation_sim.py  task4c.py  task4c_manipulation.py  task4c_perception.py
ur5_control_2345/: CMakeLists.txt  package.xml
ur5_control_2345/src/: manipulation_final.py  perception_final.py  task5_manipulation.py  task5_perception.py  task6_manipluation.py
